[gd_scene load_steps=4 format=3 uid="uid://xax48hj3biwh"]

[ext_resource type="Script" path="res://levels/duck_mission.gd" id="1_e83kr"]
[ext_resource type="PackedScene" uid="uid://dnsco05646th5" path="res://char_files/castro.tscn" id="2_311nx"]
[ext_resource type="PackedScene" uid="uid://cojowxfjaym7m" path="res://char_files/duck.tscn" id="3_7408n"]

[node name="duck_mission" type="Node2D"]
script = ExtResource("1_e83kr")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="castro" parent="." instance=ExtResource("2_311nx")]
position = Vector2(-198, -317)

[node name="duck" parent="." instance=ExtResource("3_7408n")]
visible = false

[node name="lose label" type="RichTextLabel" parent="."]
offset_left = -414.0
offset_top = 609.0
offset_right = 422.0
offset_bottom = 964.0
theme_override_font_sizes/normal_font_size = 100
text = "Assassination: You scored X"

[node name="winTimer" type="Timer" parent="."]
wait_time = 3.942

[node name="lvTimer" type="Timer" parent="."]
wait_time = 3.096
one_shot = true
autostart = true

[connection signal="timeout" from="winTimer" to="." method="_on_win_timer_timeout"]
[connection signal="timeout" from="lvTimer" to="." method="_on_lv_timer_timeout"]
